--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,8 @@
     <meta name="title" content="BunchUp">
     <meta name="description" content="Here on BunchUp, we provide you a platform where you can enlist your outing plans and go out with random people whenever you want wherever you want.">
     <meta property="og:image" content="/assests/image/logo_about.jpg">
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
     <meta property="og:url" content="https://bunchup.in" />
     <meta name="keywords" content="Meetup, clubbing, bunch, bunchup, cafes, outing, offline meetup, mumbai">
     <meta name="robots" content="index, follow">
