--- a/about.html
+++ b/about.html
@@ -482,7 +482,7 @@
                  ©2023 Bunchup  
             </div>
             <div class="footer_content_right">
-                 <a href="mailto:gettogetherwithbunchup@gmail.com" target="_blank"><i class="fa fa-envelope " title="facebook"></i></a>
+                 <a href="mailto:gettogetherwithbunchup@gmail.com" target="_blank"><i class="fa fa-envelope " title="mail"></i></a>
                  <a href="https://www.instagram.com/bunchup.in/" target="_blank"><i class="fa fa-instagram"  title="instagram"></i></a>
                  <a href="https://www.linkedin.com/company/bunchup-in/" target="_blank"><i class="fa fa-linkedin"   title="linkedin"></i></a>
                  <a href="Tel:+91 7900186313" target="_blank"><i class="fa fa-phone"   title="call us"></i></a>
