--- a/faq.html
+++ b/faq.html
@@ -36,7 +36,7 @@
             <li>
             <ol><a href="/">Home  <i class="fa fa-fw fa-home"></i> </a></ol>
             <ol><a href="/about.html">About Us<i class="fa fa-fw fa-info-circle"></i> </a></ol>
-            <ol><a href="#joinus">Join Us<i class="fa fa-fw fa-users"></i> </a></ol>
+            <ol><a href="https://docs.google.com/forms/d/e/1FAIpQLScqCNzw9riIDA8f-oxwHgDZcAaN_t_FUbFkVo6lJEi4l5KDHw/viewform?usp=pp_url">Join Us<i class="fa fa-fw fa-users"></i> </a></ol>
             <ol><a href="/faq.html">FAQs<i class="fa fa-fw fa-question-circle"></i> </a></ol>
             <ol><a href="#bottom_container">Contact Us<i class="fa fa-fw fa-question-circle"></i></ol>
         </li>
@@ -48,7 +48,7 @@
             <div class="nav_content_container">
                 <a href="/">Home</a>
                 <a href="/about.html">About Us</a>
-                <a href="#joinus">Join Us</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScqCNzw9riIDA8f-oxwHgDZcAaN_t_FUbFkVo6lJEi4l5KDHw/viewform?usp=pp_url">Join Us</a>
                 <a href="/faq.html">FAQs</a>
                 <a href="#bottom_container">Contact Us</a>                
             </div>
