--- a/about.html
+++ b/about.html
@@ -244,6 +244,75 @@
                     </div>
                 </div>
             </div>
+            <div class="overlay" style="display: none;" id="nerul_info">
+                <div class="popup" >
+                    <span class="close"  onclick="close_about('nerul_info')">&times;</span>
+                    <div class="about_info">
+                        <div class="about_info_img">
+                            <img src="assests/image/aditya.jpg" alt="Nerul Sharma">
+                        </div>
+                        <div class="about_info_content">
+                            <div class="about_info_name">
+                                Nerul Sharma
+                            </div>
+                            <div class="about_info_designation">
+                                CMO
+                            </div>
+                            <div class="about_info_descripton">
+                                Strategic Chief Marketing Officer skilled at managing all marketing activities. She directs our marketing initiatives and makes certain that our target demographic is receptive to our idea. Excels at developing creative digital content for promotional campaigns.  
+                            </div>
+                            <div class="about_info_heading">
+                                Word from me
+                            </div>
+                            <div class="about_info_word">
+                                "Something interesting from me"
+                            </div>
+                            <div class="about_info_heading">
+                                Connect me on
+                            </div>
+                            <div class="about_info_social">
+                                <a href="" target="_blank"><i class="fa fa-instagram"  title="instagram"></i></a>
+                                <a href="" target="_blank"><i class="fa fa-linkedin" title="linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="overlay" style="display: none;" id="kaustubh_info">
+                <div class="popup" >
+                    <span class="close"  onclick="close_about('kaustubh_info')">&times;</span>
+                    <div class="about_info">
+                        <div class="about_info_img">
+                            <img src="assests/image/kaustubh.jpg" alt="Kaustubh">
+                        </div>
+                        <div class="about_info_content">
+                            <div class="about_info_name">
+                                Kaustubh
+                            </div>
+                            <div class="about_info_designation">
+                                Financial Manager
+
+                            </div>
+                            <div class="about_info_descripton">
+                                Skilled financial manager adept at increasing work process efficiency and profitability through functional and technical analysis. Effective communicator with great time management skills and well developed analytical abilities.
+                            </div>
+                            <div class="about_info_heading">
+                                Word from me
+                            </div>
+                            <div class="about_info_word">
+                                "Something interesting from me"
+                            </div>
+                            <div class="about_info_heading">
+                                Connect me on
+                            </div>
+                            <div class="about_info_social">
+                                <a href="" target="_blank"><i class="fa fa-instagram"  title="instagram"></i></a>
+                                <a href="" target="_blank"><i class="fa fa-linkedin" title="linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="overlay" style="display: none;" id="maurwin_info">
                 <div class="popup" >
                     <span class="close"  onclick="close_about('maurwin_info')">&times;</span>
@@ -302,7 +371,7 @@
                                 "Take the risk or lose the chance."
                             </div>
                             <div class="about_info_heading">
-                                Connect me on
+                                Connect me on   
                             </div>
                             <div class="about_info_social">
                                 <a href="https://www.instagram.com/anushka_behere" target="_blank"><i class="fa fa-instagram"  title="instagram"></i></a>
@@ -324,7 +393,7 @@
                                 Gaurav Madan
                             </div>
                             <div class="about_info_designation">
-                                Figma developer/Uixi designer
+                                UI Designer
                             </div>
                             <div class="about_info_descripton">
                                 Innovative, task-driven professional with experience in web design and development. Proficient in creating user interface, writing and testing codes and implementing new features based on feedback.
@@ -358,7 +427,7 @@
                                 Reena Verma
                             </div>
                             <div class="about_info_designation">
-                                Content Manager
+                                UI Designer
                             </div>
                             <div class="about_info_descripton">
                                 Detail-oriented content manager with experience in digital writing and editing. A professional with multiple responsibilities like monitoring website, preparing editorial guidelines, and performing research to determine audience needs and interests.
@@ -401,7 +470,7 @@
                                 Word from me
                             </div>
                             <div class="about_info_word">
-                                "Something intresting from me"
+                                "Finding joy in the journey, not just the destination."
                             </div>
                             <div class="about_info_heading">
                                 Connect me on
@@ -479,6 +548,15 @@
                         <div class="card_founders"  id="tanmay" onclick="open_about(this.id)">
                             <img src="assests/image/tanmay.jpg" alt="Tanmay Godha">
                         </div>
+                        <div class="card_founders"  id="nerul" onclick="open_about(this.id)">
+                            <img src="assests/image/aditya.jpg" alt="Nerul Sharma">
+                        </div> 
+                    </div>
+                    <div class="card_founder_wrapper">
+                        
+                        <div class="card_founders"  id="kaustubh" onclick="open_about(this.id)">
+                            <img src="assests/image/kaustubh.jpg" alt="Kaustubh">
+                        </div> 
                         <div class="card_founders"  id="vedant" onclick="open_about(this.id)">
                             <img src="assests/image/vedant.jpg" alt="Vedant Kamble">
                         </div> 
